# SO1_1S_2025_202201444

./: README.md
proyecto1/: .gitignore
proyecto1/containers/: containers.sh
proyecto1/documentacion/: Manual_Tecnico.md
proyecto1/grafana/: docker-compose.yml
proyecto1/log_container/: Dockerfile  main.py  requerimientos.txt
proyecto1/modulo/: .Module.symvers.cmd  .modules.order.cmd  .sysinfo_202201444.ko.cmd  .sysinfo_202201444.mod.cmd  .sysinfo_202201444.mod.o.cmd  .sysinfo_202201444.o.cmd  Makefile  modules.order  sysinfo_202201444.c  sysinfo_202201444.ko  sysinfo_202201444.mod.c
proyecto1/servicio_rust/: .gitignore  Cargo.toml
proyecto1/servicio_rust/src/: main.rs
proyecto2/: Manual_Tecnico.md  comandos.md
proyecto2/go-api/: Dockerfile.api  Dockerfile.grpc  go.mod  go.sum  grpc_client.go  main.go
proyecto2/go-kafka-writer/: Dockerfile  go.mod  go.sum  main.go
proyecto2/go-rabbitmq-writer/: Dockerfile  go.mod  go.sum  main.go
proyecto2/kafka-consumer/: Dockerfile  go.mod  go.sum  main.go
proyecto2/kubernetes/: go-deployment-1.yaml  go-kafka-deployment.yaml  go-rabbitmq-deployment.yaml  grafana-deployment.yaml  grafana-ingress.yaml  kafka-cluster.yaml  kafka-consumer-deployment.yaml  message.yaml  rabbitmq-consumer-deployment.yaml  rabbitmq.yaml  redis-deployment.yaml  rust-deployment.yaml  rust-hpa.yaml  rust-ingress.yaml  rust-service.yaml  valkey-deployment.yaml
proyecto2/locust/: locustfile.py
proyecto2/rabbitmq-consumer/: Dockerfile  go.mod  go.sum  main.go
proyecto2/rust-api/: Cargo.toml  Dockerfile
proyecto2/rust-api/src/: main.rs
(+4 files in other folders)
