[package]
name = "servicio_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] } # Quitamos "blocking"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
docker-api = "0.14"
ctrlc = "3.2"